fix: set menu container z-index to a correct value

--- a/front-end/src/app/header/header.component.scss
+++ b/front-end/src/app/header/header.component.scss
@@ -117,10 +117,10 @@ $wave-animation-duration: 0.3s;
   width : 100%;
   height : 88.8%;
   position : absolute;
+  z-index: 60000;
 }
 
 #opacity{
-  z-index: 5;
   width: 100%;
   height:100%;
   background-color: black;
